--- a/nico/docker-compose.yaml
+++ b/nico/docker-compose.yaml
@@ -26,6 +26,7 @@ services:
     command: ["copy","/mnt/config","jonomega:/Backup/rclone/heimdall"]
   db:
     image: postgres:13
+    container_name: vikunja-db
     environment:
       POSTGRES_PASSWORD: secret
       POSTGRES_USER: vikunja
