--- a/donna/backup-config.cfg
+++ b/donna/backup-config.cfg
@@ -1,6 +1,6 @@
 TELEGRAM_BOT_TOKEN=''
 CHAT_ID=''
 TEXT=''
-HOSTNAME=''
+HOSTNAME='donna'
 CONTAINERS=("rclone-radarr" "rclone-sonarr" "rclone-bazarr" "rclone-prowlarr" "rclone-transmission")
 
