--- a/nico/docker-compose.yaml
+++ b/nico/docker-compose.yaml
@@ -75,7 +75,7 @@ services:
     container_name: fireflyiii
     restart: always
     volumes:
-      - firefly_iii_upload:/var/www/html/storage/upload
+      - /home/pi/config/config/fireflyiii:/var/www/html/storage/upload
     env_file: .env
     ports:
       - 80:8080
