--- a/nico/backup-config.cfg
+++ b/nico/backup-config.cfg
@@ -2,5 +2,5 @@ TELEGRAM_BOT_TOKEN=''
 CHAT_ID=''
 TEXT=''
 HOSTNAME='nico'
-CONTAINERS=("rclone-heimdall" "rclone-vikunja-db" "rclone-vikunja-api" "rclone-pihole" "rclone-tautulli" "rclone-pivpn")
+CONTAINERS=("rclone-heimdall" "rclone-vikunja-db" "rclone-vikunja-api" "rclone-pihole" "rclone-tautulli" "rclone-pivpn" "rclone-fireflyiii")
 
