--- a/donna/backup-config.cfg
+++ b/donna/backup-config.cfg
@@ -2,5 +2,5 @@ TELEGRAM_BOT_TOKEN=''
 CHAT_ID=''
 TEXT=''
 HOSTNAME='donna'
-CONTAINERS=("rclone-radarr" "rclone-sonarr" "rclone-bazarr" "rclone-prowlarr" "rclone-transmission")
+CONTAINERS=("rclone-radarr" "rclone-sonarr" "rclone-bazarr" "rclone-prowlarr" "rclone-transmission" "rclone-lidarr")
 
