--- a/nico/docker-compose.yaml
+++ b/nico/docker-compose.yaml
@@ -46,7 +46,7 @@ services:
       VIKUNJA_DATABASE_USER: vikunja
       VIKUNJA_DATABASE_DATABASE: vikunja
       VIKUNJA_SERVICE_JWTSECRET: <a super secure random secret>
-      VIKUNJA_SERVICE_PUBLICURL: https://vikunja.montesj.dev
+      VIKUNJA_SERVICE_PUBLICURL: https://vikunja.montesj.dev/
     ports:
       - 3456:3456
     volumes:
