--- a/donna/docker-compose.yaml
+++ b/donna/docker-compose.yaml
@@ -70,6 +70,10 @@ services:
       - 9091:9091
       - 51413:51413
       - 51413:51413/udp
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/Bogota
     volumes:
       - /home/pi/config/config/transmission:/config
       - /home/pi/completedTorrents:/downloads
