added proton backup

--- a/donna/docker-compose.yaml
+++ b/donna/docker-compose.yaml
@@ -89,6 +89,18 @@ services:
       - /home/pi/config/config/rclone:/config
       - /home/pi/config/config/radarr/Backups/scheduled/:/mnt/config
     command: ["copy","/mnt/config","jonomega:/Backup/rclone/radarr/"]
+  rclone-radarr-proton:
+    image: rclone/rclone
+    restart: on-failure
+    container_name: rclone-radarr-proton
+    environment:
+      - TZ=America/Bogota
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - /home/pi/config/config/rclone:/config
+      - /home/pi/config/config/radarr/Backups/scheduled/:/mnt/config
+    command: ["copy","/mnt/config","jonoproton:/Backup/rclone/radarr/"]
   rclone-sonarr:
     image: rclone/rclone
     restart: on-failure
@@ -101,6 +113,18 @@ services:
       - /home/pi/config/config/rclone:/config
       - /home/pi/config/config/sonarr/Backups/scheduled/:/mnt/config
     command: ["copy","/mnt/config","jonomega:/Backup/rclone/sonarr/"]
+  rclone-sonarr-proton:
+    image: rclone/rclone
+    restart: on-failure
+    container_name: rclone-sonarr-proton
+    environment:
+      - TZ=America/Bogota
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - /home/pi/config/config/rclone:/config
+      - /home/pi/config/config/sonarr/Backups/scheduled/:/mnt/config
+    command: ["copy","/mnt/config","jonoproton:/Backup/rclone/sonarr/"]
   rclone-lidarr:
     image: rclone/rclone
     restart: on-failure
@@ -113,6 +137,18 @@ services:
       - /home/pi/config/config/rclone:/config
       - /home/pi/config/config/lidarr/Backups/scheduled/:/mnt/config
     command: ["copy","/mnt/config","jonomega:/Backup/rclone/lidarr/"]
+  rclone-lidarr-proton:
+    image: rclone/rclone
+    restart: on-failure
+    container_name: rclone-lidarr-proton
+    environment:
+      - TZ=America/Bogota
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - /home/pi/config/config/rclone:/config
+      - /home/pi/config/config/lidarr/Backups/scheduled/:/mnt/config
+    command: ["copy","/mnt/config","jonoproton:/Backup/rclone/lidarr/"]
   rclone-bazarr:
     image: rclone/rclone
     restart: on-failure
@@ -125,6 +161,18 @@ services:
       - /home/pi/config/config/rclone:/config
       - /home/pi/config/config/bazarr/backup/:/mnt/config
     command: ["copy","/mnt/config","jonomega:/Backup/rclone/bazarr/"]
+  rclone-bazarr-proton:
+    image: rclone/rclone
+    restart: on-failure
+    container_name: rclone-bazarr-proton
+    environment:
+      - TZ=America/Bogota
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - /home/pi/config/config/rclone:/config
+      - /home/pi/config/config/bazarr/backup/:/mnt/config
+    command: ["copy","/mnt/config","jonoproton:/Backup/rclone/bazarr/"]
   rclone-prowlarr:
     image: rclone/rclone
     restart: on-failure
@@ -137,6 +185,18 @@ services:
       - /home/pi/config/config/rclone:/config
       - /home/pi/config/config/prowlarr/Backups/scheduled/:/mnt/config
     command: ["copy","/mnt/config","jonomega:/Backup/rclone/prowlarr/"]
+  rclone-prowlarr-proton:
+    image: rclone/rclone
+    restart: on-failure
+    container_name: rclone-prowlarr-proton
+    environment:
+      - TZ=America/Bogota
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - /home/pi/config/config/rclone:/config
+      - /home/pi/config/config/prowlarr/Backups/scheduled/:/mnt/config
+    command: ["copy","/mnt/config","jonoproton:/Backup/rclone/prowlarr/"]
   rclone-transmission:
     image: rclone/rclone
     restart: on-failure
@@ -149,3 +209,16 @@ services:
       - /home/pi/config/config/rclone:/config
       - /home/pi/config/config/transmission/:/mnt/config
     command: ["copy","/mnt/config","jonomega:/Backup/rclone/transmission/"]
+  rclone-transmission-proton:
+    image: rclone/rclone
+    restart: on-failure
+    container_name: rclone-transmission-proton
+    environment:
+      - TZ=America/Bogota
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - /home/pi/config/config/rclone:/config
+      - /home/pi/config/config/transmission/:/mnt/config
+    command: ["copy","/mnt/config","jonoproton:/Backup/rclone/transmission/"]
+
