--- a/yiya/docker-compose.yaml
+++ b/yiya/docker-compose.yaml
@@ -20,6 +20,11 @@ services:
     container_name: grafana
     image: grafana/grafana
     restart: always
+    environment:
+       - GF_AUTH_DISABLE_LOGIN_FORM=true
+       - GF_AUTH_ANONYMOUS_ENABLED=true
+       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+       - GF_SECURITY_ALLOW_EMBEDDING=true
     ports:
       - 3000:3000
     volumes:
