--- a/nico/docker-compose.yaml
+++ b/nico/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
       - /home/pi/config/config/heimdall:/config
   rclone-heimdall:
     image: rclone/rclone
-    restart: on-failure
+    restart: no
     container_name: rclone-heimdall
     environment:
       - TZ=America/Bogota
@@ -70,7 +70,7 @@ services:
       - /home/pi/config/config/tautulli:/config
   rclone-vikunja-db:
     image: rclone/rclone
-    restart: on-failure
+    restart: no
     container_name: rclone-vikunja-db
     environment:
       - TZ=America/Bogota
@@ -82,7 +82,7 @@ services:
     command: ["copy","/mnt/config","jonomega:/Backup/rclone/vikunja/db"]
   rclone-vikunja-api:
     image: rclone/rclone
-    restart: on-failure
+    restart: no
     container_name: rclone-vikunja-api
     environment:
       - TZ=America/Bogota
@@ -94,7 +94,7 @@ services:
     command: ["sync","/mnt/config","jonomega:/Backup/rclone/vikunja/api"]
   rclone-pihole:
     image: rclone/rclone
-    restart: on-failure
+    restart: no
     container_name: rclone-pihole
     environment:
       - TZ=America/Bogota
@@ -106,7 +106,7 @@ services:
     command: ["copy","/mnt/config","jonomega:/Backup/rclone/pihole1"]
   rclone-pivpn:
     image: rclone/rclone
-    restart: on-failure
+    restart: no
     container_name: rclone-pivpn
     environment:
       - TZ=America/Bogota
@@ -118,7 +118,7 @@ services:
     command: ["copy","/mnt/config","jonomega:/Backup/rclone/pivpn"]
   rclone-tautulli:
     image: rclone/rclone
-    restart: on-failure
+    restart: no
     container_name: rclone-tautulli
     environment:
       - TZ=America/Bogota
