--- a/nico/docker-compose.yaml
+++ b/nico/docker-compose.yaml
@@ -23,18 +23,6 @@ services:
       - "81:80"
     volumes:
       - /home/pi/config/config/heimdall:/config
-  rclone-heimdall:
-    image: rclone/rclone
-    restart: no
-    container_name: rclone-heimdall
-    environment:
-      - TZ=America/Bogota
-      - PUID=1000
-      - PGID=1000
-    volumes:
-      - /home/pi/config/config/rclone:/config
-      - /home/pi/config/config/heimdall/:/mnt/config
-    command: ["copy","/mnt/config","jonomega:/Backup/rclone/heimdall"]
   db:
     image: postgres:13
     container_name: vikunja-db
@@ -151,3 +139,101 @@ services:
       - /home/pi/config/config/rclone:/config
       - /home/pi/config/config/changedetection/:/mnt/config
     command: ["copy","/mnt/config","jonomega:/Backup/rclone/changedetection"]
+  rclone-heimdall:
+    image: rclone/rclone
+    restart: no
+    container_name: rclone-heimdall
+    environment:
+      - TZ=America/Bogota
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - /home/pi/config/config/rclone:/config
+      - /home/pi/config/config/heimdall/:/mnt/config
+    command: ["copy","/mnt/config","jonomega:/Backup/rclone/heimdall"]
+
+  rclone-vikunja-db-proton:
+    image: rclone/rclone
+    restart: no
+    container_name: rclone-vikunja-db-proton
+    environment:
+      - TZ=America/Bogota
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - /home/pi/config/config/rclone:/config
+      - /home/pi/config/config/vikunja/db:/mnt/config
+    command: ["copy","/mnt/config","jonoproton:/Backup/rclone/vikunja/db"]
+  rclone-vikunja-api-proton:
+    image: rclone/rclone
+    restart: no
+    container_name: rclone-vikunja-api-proton
+    environment:
+      - TZ=America/Bogota
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - /home/pi/config/config/rclone:/config
+      - ./files:/mnt/config
+    command: ["sync","/mnt/config","jonoproton:/Backup/rclone/vikunja/api"]
+  rclone-pihole-proton:
+    image: rclone/rclone
+    restart: no
+    container_name: rclone-pihole-proton
+    environment:
+      - TZ=America/Bogota
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - /home/pi/config/config/rclone:/config
+      - /home/pi/pihole-backup/:/mnt/config
+    command: ["copy","/mnt/config","jonoproton:/Backup/rclone/pihole1"]
+  rclone-pivpn-proton:
+    image: rclone/rclone
+    restart: no
+    container_name: rclone-pivpn-proton
+    environment:
+      - TZ=America/Bogota
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - /home/pi/config/config/rclone:/config
+      - /home/pi/pivpnbackup/:/mnt/config
+    command: ["copy","/mnt/config","jonoproton:/Backup/rclone/pivpn"]
+  rclone-tautulli-proton:
+    image: rclone/rclone
+    restart: no
+    container_name: rclone-tautulli-proton
+    environment:
+      - TZ=America/Bogota
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - /home/pi/config/config/rclone:/config
+      - /home/pi/config/config/tautulli/backups/:/mnt/config
+    command: ["copy","/mnt/config","jonoproton:/Backup/rclone/tautulli/"]
+  rclone-changedetection-proton:
+    image: rclone/rclone
+    restart: no
+    container_name: rclone-changedetection-proton
+    environment:
+      - TZ=America/Bogota
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - /home/pi/config/config/rclone:/config
+      - /home/pi/config/config/changedetection/:/mnt/config
+    command: ["copy","/mnt/config","jonoproton:/Backup/rclone/changedetection"]
+  rclone-heimdall-proton:
+    image: rclone/rclone
+    restart: no
+    container_name: rclone-heimdall-proton
+    environment:
+      - TZ=America/Bogota
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - /home/pi/config/config/rclone:/config
+      - /home/pi/config/config/heimdall/:/mnt/config
+    command: ["copy","/mnt/config","jonoproton:/Backup/rclone/heimdall"]
+
