--- a/nico/backup-config.cfg
+++ b/nico/backup-config.cfg
@@ -2,5 +2,5 @@ TELEGRAM_BOT_TOKEN=''
 CHAT_ID=''
 TEXT=''
 HOSTNAME='nico'
-CONTAINERS=("rclone-heimdall" "rclone-vikunja-db" "rclone-vikunja-api" "rclone-pihole" "rclone-tautulli" "rclone-pivpn" "rclone-changedetection" "rclone-heimdall-proton" "rclone-vikunja-db-proton" "rclone-vikunja-api-proton" "rclone-pihole-proton" "rclone-tautulli-proton" "rclone-pivpn-proton" "rclone-changedetection-proton")
+CONTAINERS=("rclone-heimdall" "rclone-vikunja-db" "rclone-vikunja-api" "rclone-pihole" "rclone-tautulli" "rclone-changedetection")
 
