--- a/yiya/backup-config.cfg
+++ b/yiya/backup-config.cfg
@@ -2,5 +2,5 @@ TELEGRAM_BOT_TOKEN=''
 CHAT_ID=''
 TEXT=''
 HOSTNAME='yiya'
-CONTAINERS=("rclone-uptime-kuma" "rclone-pihole" "rclone-grafana")
+CONTAINERS=("rclone-uptime-kuma" "rclone-grafana")
 
