--- a/yiya/docker-compose.yaml
+++ b/yiya/docker-compose.yaml
@@ -23,6 +23,7 @@ services:
       - 9093:9093
     volumes:
       - ./alertmanager.yml:/etc/prometheus/alertmanager.yml
+      - ./templates:/etc/alertmanager/template
   grafana:
     container_name: grafana
     image: grafana/grafana
