--- a/yiya/prometheus.yaml
+++ b/yiya/prometheus.yaml
@@ -33,7 +33,9 @@ scrape_configs:
     metrics_path: '/metrics'
     static_configs:
       - targets: ['yiya:3001']
-rules:
+groups:
+- name: example
+  rules:
   - alert: InstanceDown
     expr: up == 0
     for: 1m
