--- a/yiya/prometheus.yaml
+++ b/yiya/prometheus.yaml
@@ -33,12 +33,14 @@ scrape_configs:
     metrics_path: '/metrics'
     static_configs:
       - targets: ['yiya:3001']
-rules:
-  - alert: InstanceDown
-    expr: up == 0
-    for: 1m
-    labels:
-      severity: critical
-    annotations:
-      summary: "Instance {{ $labels.instance }} down"
-      description: "{{ $labels.instance }} de job {{ $labels.job }} está caído."
+groups:
+  - name: alert-group
+    rules:
+    - alert: InstanceDown
+      expr: up == 0
+      for: 1m
+      labels:
+        severity: critical
+      annotations:
+        summary: "Instance {{ $labels.instance }} down"
+        description: "{{ $labels.instance }} de job {{ $labels.job }} está caído."
