fixed files extensions

--- a/yiya/docker-compose.yaml
+++ b/yiya/docker-compose.yaml
@@ -14,8 +14,8 @@ services:
     ports:
       - 9090:9090
     volumes:
-      - ./prometheus.yaml:/etc/prometheus/prometheus.yml
-      - ./alert_rules.yaml:/etc/prometheus/alert_rules.yml
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./alert_rules.yml:/etc/prometheus/alert_rules.yml
   alertmanager:
     image: prom/alertmanager
     restart: always
