id not in quotes

--- a/yiya/alertmanager.yml
+++ b/yiya/alertmanager.yml
@@ -8,4 +8,4 @@ receivers:
 - name: 'telegram'
   telegram_configs:
   - bot_token: 'YOUR_BOT_TOKEN'
-    chat_id: 'YOUR_CHAT_ID'
+    chat_id: YOUR_CHAT_ID
