moved change detection and removed proton

--- a/donna/backup-config.cfg
+++ b/donna/backup-config.cfg
@@ -2,5 +2,5 @@ TELEGRAM_BOT_TOKEN=''
 CHAT_ID=''
 TEXT=''
 HOSTNAME='donna'
-CONTAINERS=("rclone-radarr" "rclone-sonarr" "rclone-bazarr" "rclone-prowlarr" "rclone-transmission" "rclone-lidarr" "rclone-radarr-proton" "rclone-sonarr-proton" "rclone-bazarr-proton" "rclone-prowlarr-proton" "rclone-transmission-proton" "rclone-lidarr-proton")
+CONTAINERS=("rclone-radarr" "rclone-sonarr" "rclone-bazarr" "rclone-prowlarr" "rclone-transmission" "rclone-lidarr" "rclone-changedetection" )
 
