--- a/yiya/prometheus.yml
+++ b/yiya/prometheus.yml
@@ -12,7 +12,7 @@ rule_files:
   - "alert_rules.yml"  
 
 scrape_configs:
-  - job_name: 'wendy'
+  - job_name: 'hass'
     metrics_path: /api/prometheus
     scrape_interval: 60s
     static_configs:
@@ -20,6 +20,10 @@ scrape_configs:
     scheme: http
     authorization:
       credentials: "myaccesstoken"
+  - job_name: 'wendy'
+    scrape_interval: 60s
+    static_configs:
+      - targets: ['wendy:9100']
   - job_name: 'donna'
     scrape_interval: 60s
     static_configs:
