--- a/donna/docker-compose.yaml
+++ b/donna/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: "3.3"
 services:
   radarr:
     image: linuxserver/radarr
@@ -95,7 +94,7 @@ services:
          condition: service_started
   playwright-chrome:
     hostname: playwright-chrome
-    image: dgtlmoon/sockpuppetbrowser:latest
+    image: seleniarm/standalone-chromium:4.0.0-20211213
     cap_add:
       - SYS_ADMIN
     restart: unless-stopped
