--- a/donna/docker-compose.yaml
+++ b/donna/docker-compose.yaml
@@ -94,7 +94,7 @@ services:
          condition: service_started
   playwright-chrome:
     hostname: playwright-chrome
-    image: seleniarm/standalone-chromium:4.0.0-20211213
+    image: seleniarm/standalone-chromium:latest
     cap_add:
       - SYS_ADMIN
     restart: unless-stopped
