--- a/donna/docker-compose.yaml
+++ b/donna/docker-compose.yaml
@@ -84,6 +84,7 @@ services:
       - PGID=1000
       - TZ=America/Bogota
       - WEBDRIVER_URL=http://browser-chrome:4444/wd/hub
+      - PLAYWRIGHT_DRIVER_URL=ws://playwright-chrome:3000
     volumes:
       - /home/pi/config/config/changedetection:/config
     ports:
@@ -95,6 +96,8 @@ services:
   playwright-chrome:
     hostname: playwright-chrome
     image: selenium/standalone-chromium:latest
+    ports:
+      - 3000:3000
     cap_add:
       - SYS_ADMIN
     restart: unless-stopped
