--- a/yiya/docker-compose.yaml
+++ b/yiya/docker-compose.yaml
@@ -30,6 +30,12 @@ services:
     image: grafana/grafana
     restart: always
     environment:
+       - GF_AUTH_DISABLE_LOGIN_FORM=true
+       - GF_AUTH_ANONYMOUS_ENABLED=true
+       - GF_AUTH_ANONYMOUS_ORG_ROLE=GRAFANA_ADMIN
+       - GF_SECURITY_ALLOW_EMBEDDING=true
+       - GF_PLUGIN_ADMIN_ENABLED=true
+       - GF_PLUGIN_ADMIN_EXTERNAL_MANAGE_ENABLED=true
     ports:
       - 3000:3000
     volumes:
