--- a/yiya/alert_rules.yml
+++ b/yiya/alert_rules.yml
@@ -42,7 +42,7 @@ groups:
         summary: "Espacio en disco bajo en {{ $labels.instance }}"
         description: "El espacio disponible en el sistema de archivos de {{ $labels.instance }} ha estado por debajo del 10% durante los últimos 5 minutos."
     - alert: HighTemperature
-      expr: node_temperature_celsius > 65
+      expr: node_hwmon_temp_celsius > 65
       for: 5m
       labels:
         severity: warning
