added new network

--- a/donna/docker-compose.yaml
+++ b/donna/docker-compose.yaml
@@ -76,24 +76,8 @@ services:
     volumes:
       - /home/pi/config/config/transmission:/config
       - /home/pi/completedTorrents:/downloads
-  gluetun:
-    image: qmcgaw/gluetun
-    container_name: gluetun
-    cap_add:
-      - NET_ADMIN
-    devices:
-      - /dev/net/tun:/dev/net/tun
-    ports:
-      - 8888:8888/tcp # HTTP proxy
-      - 8388:8388/tcp # Shadowsocks
-      - 8388:8388/udp # Shadowsocks
-    volumes:
-      - /yourpath:/gluetun
-    environment:
-      - VPN_SERVICE_PROVIDER=protonvpn
-      - VPN_TYPE=wireguard
-      - WIREGUARD_PRIVATE_KEY=
-      - SERVER_COUNTRIES=US
+    networks:
+      - vpn_network
   changedetection:
     image: lscr.io/linuxserver/changedetection.io:latest
     container_name: changedetection
@@ -208,5 +192,7 @@ services:
       - /home/pi/config/config/rclone:/config
       - /home/pi/config/config/changedetection/:/mnt/config
     command: ["copy","/mnt/config","jonomega:/Backup/rclone/changedetection"]
-
+networks:
+  vpn_network:
+    external: true
 
