--- a/donna/docker-compose.yaml
+++ b/donna/docker-compose.yaml
@@ -193,7 +193,6 @@ services:
       - /home/pi/config/config/changedetection/:/mnt/config
     command: ["copy","/mnt/config","jonomega:/Backup/rclone/changedetection"]
 networks:
-  vpn_network:
-    name: vpn_network
+  vlanforvpn:
     external: true
 
