--- a/donna/docker-compose.yaml
+++ b/donna/docker-compose.yaml
@@ -65,6 +65,7 @@ services:
   transmission:
     image: linuxserver/transmission
     restart: always
+    ontainer_name: transmission
     ports:
       - 9091:9091
       - 51413:51413
