--- a/donna/docker-compose.yaml
+++ b/donna/docker-compose.yaml
@@ -3,6 +3,7 @@ services:
     image: linuxserver/radarr
     restart: always
     container_name: radarr
+    network_mode: host
     environment:
       - TZ=America/Bogota
       - PUID=1000
@@ -13,8 +14,6 @@ services:
       - /home/pi/Videos/Movies:/movies
       - /home/pi/completedTorrents:/downloads
       - /home/pi/config/config/radarr:/config
-    networks:
-      - host
   sonarr:
     image: linuxserver/sonarr
     restart: always
