--- a/donna/docker-compose.yaml
+++ b/donna/docker-compose.yaml
@@ -3,7 +3,6 @@ services:
     image: linuxserver/radarr
     restart: always
     container_name: radarr
-    network_mode: host
     environment:
       - TZ=America/Bogota
       - PUID=1000
@@ -14,6 +13,8 @@ services:
       - /home/pi/Videos/Movies:/movies
       - /home/pi/completedTorrents:/downloads
       - /home/pi/config/config/radarr:/config
+    networks:
+      - red_interna
   sonarr:
     image: linuxserver/sonarr
     restart: always
@@ -197,4 +198,6 @@ services:
 networks:
   vlanforvpn:
     external: true
+  red_interna:
+    driver: bridge
 
